Bug 101698 - Changing pseudoClass :link should invalidate distribution.
Summary: Changing pseudoClass :link should invalidate distribution.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Shinya Kawanaka
URL:
Keywords:
Depends on:
Blocks: 100451
  Show dependency treegraph
 
Reported: 2012-11-08 20:49 PST by Shinya Kawanaka
Modified: 2012-11-14 19:46 PST (History)
4 users (show)

See Also:


Attachments
WIP (18.13 KB, patch)
2012-11-13 01:25 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (7.56 KB, patch)
2012-11-14 18:22 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Shinya Kawanaka 2012-11-08 20:49:05 PST
When pseudoClass :link is changed, we should invalidate distribution.
Comment 1 Shinya Kawanaka 2012-11-13 00:58:34 PST
spec says :link should match <link href="...">, but maybe we don't support it yet?
http://www.whatwg.org/specs/web-apps/current-work/multipage/selectors.html#selector-link
Comment 2 Shinya Kawanaka 2012-11-13 01:25:51 PST
Created attachment 173849 [details]
WIP
Comment 3 Shinya Kawanaka 2012-11-13 01:26:19 PST
Almost done. We have to have a test for <area>
Comment 4 Shinya Kawanaka 2012-11-14 18:22:03 PST
Created attachment 174311 [details]
Patch
Comment 5 Hajime Morrita 2012-11-14 19:02:03 PST
Comment on attachment 174311 [details]
Patch

Looks good. By the way, It looks invalidateParentDistribution... is often called with setNeedsStyleRecalc()
Do you think it is good idea to get them together somehow?
Comment 6 WebKit Review Bot 2012-11-14 19:18:30 PST
Comment on attachment 174311 [details]
Patch

Clearing flags on attachment: 174311

Committed r134727: <http://trac.webkit.org/changeset/134727>
Comment 7 WebKit Review Bot 2012-11-14 19:18:34 PST
All reviewed patches have been landed.  Closing bug.
Comment 8 Shinya Kawanaka 2012-11-14 19:46:54 PST
(In reply to comment #5)
> (From update of attachment 174311 [details])
> Looks good. By the way, It looks invalidateParentDistribution... is often called with setNeedsStyleRecalc()
> Do you think it is good idea to get them together somehow?

It seems good to have a utility method to call them.