Changing pseudoClass (:link) should cause distribution https://bugs.webkit.org/show_bug.cgi?id=101698

Reviewed by Hajime Morita.

Source/WebCore:

CSSSelector :link matches anchor element with href attribute. When href attribute of an anchor element is changed,
we have to invalidate distribution.

According to the HTML spec, :link matches a link element having href attribute, currently we have not implemented it yet.

Tests: fast/dom/shadow/pseudoclass-update-link-anchor.html
       fast/dom/shadow/pseudoclass-update-link-area.html

* html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::parseAttribute):

LayoutTests:

* fast/dom/shadow/pseudoclass-update-link-anchor-expected.html: Added.
* fast/dom/shadow/pseudoclass-update-link-anchor.html: Added.
* fast/dom/shadow/pseudoclass-update-link-area-expected.html: Added.
* fast/dom/shadow/pseudoclass-update-link-area.html: Added.


Canonical link: https://commits.webkit.org/120439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134727 268f45cc-cd09-0410-ab3c-d52691b4dbfc